# substrate-node-template

./: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/collectibles/: Cargo.toml
pallets/collectibles/src/: lib.rs
pallets/utxo/: Cargo.toml
pallets/utxo/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
